# Time_Warp_Studio

./: .coverage  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .rust-analyzer.json  .spellcheck.yml  .wordlist.txt  ARCHITECTURE.md  ARCHITECTURE_VISUALIZATION_4_5.md  AUDIT_REPORT.md  CHANGELOG.md  CNAME  CODE_ANALYSIS.md  CODE_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_VERIFICATION_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEBIAN_INSTALL.md  DEBUGGER_GUIDE.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DIRECTORY_STRUCTURE.md  DIRECTORY_TREE.txt  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  EXECUTIVE_SUMMARY.py  FAQ.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_REPORT.md  GRAPHICS_DEBUG_GUIDE.md  GRAPHICS_FIX_APPLIED.md  GRAPHICS_FIX_SUMMARY.md  GRAPHICS_FIX_SUMMARY_FINAL.md  IMPLEMENTATION_COMPLETE.md  (+115 more)
.archive/: ARCHITECTURE_OVERVIEW.md.backup
.github/: DEPLOYMENT.md  RELEASE_CHECKLIST.md  SETUP_SECRETS_AND_TRIGGER.md  copilot-instructions.md
.project/: DELIVERABLES.md  FEATURES_COMPLETE.md  FEATURE_RECOMMENDATIONS.md  GRAPHICS_ENGINE_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  README_COMPLETE.md
Apple/: Cargo.toml  README.md
Apple/src/: main.rs
Browser/web-wasm/: Cargo.toml
Core_Spec/: language.md  turtle.md
Docs/: INDEX.md  README.md
Examples/: CATALOG.md  README.md
HB_Banking/: README.md  README_ADMIN.md  __init__.py  gui_main.py  main.py  test_erp.py
LICENSES/: Apache-2.0.txt
Python/: README.md
Rust/: Cargo.toml
Rust/tests/: engine_smoke.rs
Scripts/: audit_interpreters.py  build.py  build_native.sh  build_rust.sh  ci_run_examples.py  fix_indent.py  generate_icon.py  generate_placeholders.py  generate_win2000_manifest.sh  gh_set_secrets.sh  ghcr_login.sh  install-linux-desktop-rust.sh  install-user.sh  install.sh  interpreter_shim.py  launch_editor.sh  launch_gui.sh  launch_ide.bat  launch_ide.sh  launch_ide_root.sh  make_pdf_from_text.py  make_pdf_from_text_fixed.py  make_win2000_icon.sh  pdf_utils.py  release.py  run_time_warp_rust.sh  setup_github_environments.sh  startup.py  test_win2000_build.sh  version_sync.py  wasm.mk
Tests/: README.md  test_conformance_basic_pilot_logo.py  test_debugger.py  test_generate_placeholders.py  test_gui_debug_integration.py  test_main_window_debug.py  test_pdf_multipage.py
Time_Warp_Amiga/: Dockerfile.local-toolchain  MIGRATION.md  Makefile  README.md  timewarp_amiga
Time_Warp_Apple/: README.md
Time_Warp_Go/: .gitignore  README.md  coverage.html  go.mod  pilot_coverage.html  timewarp
Time_Warp_Haiku/: Jamfile  README.md
Time_Warp_OS2/: MIGRATION.md  Makefile
Time_Warp_Python/: MIGRATION.md  QUICKSTART.md  README.md  launch_gui.sh  pyproject.toml  run_time_warp.py  test_basic_functionality.py  test_graphics.py  test_ide.py  verify_commands.py  verify_turtle_commands.py
Time_Warp_Rust/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_error_hints.bas  test_input.bas
Time_Warp_Rust/docs/: DEVELOPER_REFERENCE.md  LESSON_PLANS.md  PROGRAMMING_CHALLENGES.md  QUICK_REFERENCE.md  TEACHER_GUIDE.md  codealong_guess_game.md  walkthrough_02_basic_loops.md  walkthrough_03_logo_graphics.md
Time_Warp_Rust/src/: app.rs  lib.rs  main.rs
Time_Warp_Rust/src/audio/: mod.rs
Time_Warp_Rust/src/game/: mod.rs
Time_Warp_Rust/src/graphics/: mod.rs
Time_Warp_Rust/src/interpreter/: mod.rs
Time_Warp_Rust/src/languages/: mod.rs
Time_Warp_Rust/src/languages/basic/: mod.rs
Time_Warp_Rust/src/languages/logo/: mod.rs
Time_Warp_Rust/src/plugins/: mod.rs
Time_Warp_Rust/src/ui/: debugger.rs  editor.rs  help.rs  menubar.rs  mod.rs  output.rs  screen.rs  statusbar.rs  themes.rs
Time_Warp_Rust/src/utils/: async_exec.rs  error.rs  error_hints.rs  mod.rs
Time_Warp_Web/: MIGRATION.md  README.md  debug-graphics.html  minimal.html  simple-graphics-test.html
Time_Warp_Win2000/: Makefile
Time_Warp_Windows/: MIGRATION.md
Windows/: QUICK_START.md  time_warp_windows.manifest  time_warp_windows.rc
_pdf_multi_tmp/: in.txt
archive/: RELEASE_NOTES_v6.0.0.md  SESSION_DOCUMENTATION_COMPLETE.md  VERSION_6_0_0_SUMMARY.md  VERSION_6_0_0_UPGRADE_REPORT.md
config/: .markdownlint.json
core-spec/: language.md
docker/: Dockerfile.backend  Dockerfile.main  docker-compose.backend.yml  health-check.sh  (+3 more)
legacy/implementations/Windows/: Cargo.toml  installer.iss
legacy/implementations/Windows/src/: main.rs
(+833 files in other folders)
