[metadata]
name = time_warp_studio
version = 5.0.0

[options]
packages = find:
package_dir =
    = Platforms/Python

[flake8]
# Allow tests and tools to import from `Platforms/Python`. We also adopt
# some Black-compatible rules: 88-char line length and ignore E203.
import-order-style = google
max-line-length = 88
extend-ignore = E402, E203

[pylint]
# Globally suppress duplicate-code cross-file comparisons (R0801)
disable = R0801
