[package]
name = "time_warp_apple"
version = "3.0.0"
edition = "2021"
authors = ["James"]
description = "Time Warp IDE for Apple macOS (native)
"

[dependencies]
eframe = "0.26"
egui = "0.26"
rfd = "0.14"
evalexpr = "11"
rand = "0.8"
image = "0.24"
tempfile = "3"

# Shared interpreter engine
time_warp_rust = { path = "../Rust" }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
