[package]
name = "time_warp_rust"
version = "3.0.0"
edition = "2021"

[dependencies]
eframe = "0.26"
egui = "0.26"
tempfile = "3"
evalexpr = "11"
rand = "0.8"
# Optional MySQL integration (to be wired later)
mysql = { version = "26", optional = true }
image = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"

[features]
default = []
mysql = ["dep:mysql"]
