[package]
name = "time_warp_unified"
version = "3.0.0"
edition = "2021"
authors = ["James-HoneyBadger"]
description = "Time Warp IDE - Unified educational programming environment with PILOT, BASIC, and Logo"
license = "MIT"
repository = "https://github.com/James-HoneyBadger/Time_Warp"
keywords = ["education", "programming", "ide", "interpreter", "retro"]
categories = ["development-tools", "education"]

[dependencies]
# UI Framework
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# File Dialogs
rfd = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ML/AI (Educational) - disabled for now, will enable in Phase 5
# linfa = { version = "0.7", optional = true }
# linfa-clustering = { version = "0.7", optional = true }
# linfa-linear = { version = "0.7", optional = true }
# ndarray = { version = "0.16", optional = true }

# Audio
rodio = { version = "0.19", optional = true }

# Plugin System
libloading = { version = "0.8", optional = true }

# Regex for parsing
regex = "1.10"

# Lazy static initialization
once_cell = "1.19"

# Random number generation
rand = "0.8"

# Async runtime
tokio = { version = "1.42", features = ["rt", "time", "sync"] }

# Image encoding/decoding
image = "0.25"
imageproc = "0.25"

# Date/Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
parking_lot = "0.12"
dashmap = "6.0"

[features]
default = []
audio = ["rodio"]
ml = []  # Placeholder for future ML features
plugins = ["libloading"]
# full = ["audio", "ml", "plugins"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "time-warp"
path = "src/main.rs"
